[package]
name = "cphf"
authors = ["Daniel Bloom"]
version = "1.0.0"
license = "MIT"
description = "Compile-time perfect hash function data structures"
repository = "https://github.com/Daniel-Aaron-Bloom/cphf-rs"
edition = "2021"
readme = "README.md"
rust-version = "1.85.0"
categories = ["data-structures", "no-std"]
keywords = ["phf", "const"]

[dependencies]
const-siphasher = { version = "1.0.2", default-features = false }
arrayvec-const = { git = "https://github.com/GreenCappuccino/arrayvec-const-fork", rev = "7ebfed90496085a2ad2091191607278457a4741b", default-features = false }
sort-const = "1.0.1"
const_panic = "0.2.12"

[badges]
github = { repository = "Daniel-Aaron-Bloom/cphf-rs", workflow = "CI" }

[features]
default = ["std"]
std = ["const-siphasher/std", "arrayvec-const/std"]
