[package]
name = "cphf"
authors = ["Daniel Bloom"]
version = "1.0.0"
license = "MIT"
description = "Compile-time perfect hash function data structures"
repository = "https://github.com/Daniel-Aaron-Bloom/cphf-rs"
edition = "2021"
readme = "README.md"
rust-version = "1.85.0"
categories = ["data-structures", "no-std"]
keywords = ["phf", "const"]

[dependencies]
const-siphasher = { version = "1.0.2", default-features = false }
arrayvec-const = { version = "0.7.7", default-features = false }
sort-const = { git = "https://github.com/GreenCappuccino/sort-const-rs-fork", rev = "7fb92a5b790112295f07fc1a9e5a8711980d7ffc", default-features = false }
const_panic = "0.2.12"

[badges]
github = { repository = "Daniel-Aaron-Bloom/cphf-rs", workflow = "CI" }

[features]
default = ["std"]
std = ["const-siphasher/std", "arrayvec-const/std", "sort-const/std"]
